--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -15,6 +15,12 @@
     </div>
 
   <style>
+
+    :root{
+      --transition05: all 0.05s;
+      --transitionTiming: cubic-bezier(0.09, 2.05, 0.58, 1);
+    }
+
     html {
       background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
       background-size: cover;
@@ -62,8 +68,8 @@
       top: 50%;
       transform-origin: 100%;
       transform: rotate(90deg);
-      transition: all 0.05s;
-      transition-timing-function: cubic-bezier(0.09, 2.05, 0.58, 1);
+      transition: var(--transition05);
+      transition-timing-function: var(--transitionTiming); 
     }
 
     .hour-hand {
@@ -81,17 +87,29 @@
   </style>
 
   <script>
-
     const secondHand = document.querySelector('.second-hand');
     const minuteHand = document.querySelector('.min-hand');
     const hourHand = document.querySelector('.hour-hand');
+
+    function toggleTransition(){
+      const transitionValue = getComputedStyle(document.documentElement).getPropertyValue(`--transition05`);
+      if (transitionValue != 'all 0s') {
+        document.documentElement.style.setProperty(`--transition05`, 'all 0s');
+      }
+      else{
+        document.documentElement.style.setProperty(`--transition05`, 'all 0.05s');
+      }
+    }
 
     function setDate(){
       const second = new Date().getSeconds();
       const minute = new Date().getMinutes();
       const hour = new Date().getHours();
-      
-      //segundos divididos por 60 multiplicados por 360graus + 90graus iniciais
+
+      if (second == 0 || minute == 0 || hour == 0 ) toggleTransition();
+      if (second == 1 || minute == 1 || hour == 1 ) toggleTransition();
+
+      //seconds divided by 60 then multiplied by 360 drgrees + 90 initial degrees
       const secondDegree = (second/60)*360 + 90;
       const minuteDegree = (minute/60)*360 + 90;
       const hourDegree = (hour/12)*360 + 90;
