--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -37,29 +37,76 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    //Select data that fit the criteria in a new array, in this case the criteria is year greater or equal than 1500
+    //and less than 1600
+    const fifteen = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+    console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    // Create a copy of the array with the same number of rows but only with the elements
+    // selected
+    const fullName = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.table(fullName);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    //Create a sorted copy of the array following a sort criteria estipulated in a function
+    // const ordered = inventors.sort(function (a, b){
+    //   if (a.year > b.year) {
+    //     return 1;
+    //   } else {
+    //     return -1;
+    //   }
+    // });
+
+    const ordered = inventors.sort((a,b) => a.year > b.year ? 1 : -1);
+    console.table(ordered);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    // Reduce one or more elements of the array into a single one.
+    // reduce(accumulative Variable, function, initial value of accumulative variable)
+    // Useful to sum lots of values into a single total variable, per example
+
+    const total = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+
+    console.table(total);
 
     // 5. Sort the inventors by years lived
+    // lived longer to who lived less.
+    const sortedByYearsLived = inventors.sort((a, b) => (a.passed - a.year) > (b.passed - b.year) ? -1 : 1);
+    console.table(sortedByYearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    const category = document.querySelector('.mw-category');
+    const links = Array.from(document.querySelectorAll('a'));
+    const de = links
+                    .map(link => link.textContent)
+                    .filter(textlink => textlink.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+    const orderedPeople = people.sort((a, b) => a > b ? 1 : -1);
+    console.table(orderedPeople);
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car','logo poco', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const dataSum = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {});
 
+    console.table(dataSum);
   </script>
 </body>
 </html>
